--- a/src/scss/big-mobile/six_box.scss
+++ b/src/scss/big-mobile/six_box.scss
@@ -37,6 +37,11 @@
   .form-contacts {
     padding-right: 15px;
 
+    label {
+      font-size: 12px;
+    }
+
+
     .btn-gradient-border {
       background: transparent;
     }
