--- a/src/scss/extra-small-mobile/fourth_box.scss
+++ b/src/scss/extra-small-mobile/fourth_box.scss
@@ -1,6 +1,10 @@
 @import '../variables';
 
 .fourth-panel {
+  &.big-devices {
+    display: none;
+  }
+
   .text-4 {
     span {
       font-size: 1.4em;
