--- a/src/scss/big-mobile/main_mobile.scss
+++ b/src/scss/big-mobile/main_mobile.scss
@@ -16,19 +16,22 @@
 .header-panel {
     max-height: 30%;
     height: 450px;
+    margin-bottom: 80px;
 
     &>.row {
         .left-side-box {
-            background: url("../../images/box-1-bg.png")no-repeat;
-            background-size: 135%;
+            //background: url("../../images/box-1-bg.png")no-repeat;
+            //background-size: 135%;
 
             .row {
-                padding-left: 12%;
-                margin-top: 13%;
+                padding:0 12%;
+                margin-top: 7%;
+                display: block;
+                text-align: center;
 
                 .title-big-1 {
                     font-size: 1.4rem;
-                    margin-top: 20px;
+                    margin-top: 30px;
                     margin-bottom: 15px;
 
                     span {
@@ -37,69 +40,40 @@
                 }
 
                 .text-color-light-gray {
-                    margin-bottom: 30px;
                     font-size: 0.9rem;
-                }
-
-                .btn-group {
-                    margin-top: 0;
-
-                    .btn-lang {
-                        background: transparent;
-                    }
-                }
-            }
-        }
-
-        .right-side-box {
-            .row {
-                bottom: 5%;
-                right: 0;
-                padding: 26px;
-
-
-                @media (max-width: 654.98px) {
-                    .king-size {
-                        font-size: 3.2rem;
-                        line-height: 4.5rem;
-
-                        .who {
-                            font-size: 7rem;
-                        }
-                    }
-
-                    .btn-group {
-                        margin-left: 0;
-                        display: grid;
-                    }
-                }
-
-                @media (min-width: 655px) {
-                    .king-size {
-                        font-size: 4.2rem;
-                        line-height: 4.5rem;
-
-                        .who {
-                            font-size: 8rem;
-                        }
-                    }
-
-                    .btn-group {
-                        margin-left: 0;
-                        display: grid;
-                    }
                 }
             }
         }
     }
 
+    .btn-bottom {
+      padding:0 12%;
+
+      .btn-lang {
+          background: transparent;
+      }
+
+      .btn-group-sign-in {
+          float: right;
+
+          .btn {
+              color: $crimson;
+
+              .icon:before {
+                  color: $crimson;
+              }
+          }
+      }
+    }
+
     .lion-header {
         width: 100%;
-        max-width: 210px;
-        position: absolute;
-        top: 40px;
-        right: -90px;
-        z-index: 10;
+        margin-top: 10px;
+        @extend .img-big-center;
+
+        @media (min-width: $land-mobile-start) {
+            max-width: 110px;
+        }
     }
 }
 
@@ -140,4 +114,11 @@
 .logo {
     width: 70px;
     height: 50px;
+    @extend .img-big-center;
+}
+
+.img-big-center {
+    margin-left: auto!important;
+    margin-right: auto!important;
+    display: block;
 }
