--- a/src/scss/desctop/fourth_box.scss
+++ b/src/scss/desctop/fourth_box.scss
@@ -8,23 +8,22 @@
   }
   .carousel-control-next,
   .carousel-control-prev {
-    top: 200px;
+    top: 150px;
     width: 50px;
     height: 50px;
     border-radius: 2px !important;
   }
 
   .carousel-control-prev {
-    left: -5%;
+    left: 1%;
   }
 
   .carousel-control-next {
-    right: -5%;
+    right: 1%;
   }
 
   .carousel {
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 0 7%;
 
     .carousel-item {
       > div {
@@ -57,6 +56,7 @@
 
         .carusel-image {
           width: 150px;
+          height: 215px;
         }
       }
     }
