--- a/src/scss/desctop/six_box.scss
+++ b/src/scss/desctop/six_box.scss
@@ -38,6 +38,27 @@
   .form-contacts {
     padding-right: 15px;
 
+    .col-lg-4 {
+      flex: 0 0 31%;
+      max-width: 31.333333%;
+    }
+
+    .reverse-row {
+      flex-direction: row-reverse;
+      padding-right: 9%;
+
+      .col-lg-8 {
+        margin-right: 1.9rem;
+        flex: 0 0 70%;
+        max-width: 70%;
+      }
+
+      .col-lg-halg-3 {
+        flex: 0 0 27%;
+        max-width: 27%;
+      }
+    }
+
     .btn-gradient-border {
       background: transparent;
     }
