--- a/src/css/seventh_box.css
+++ b/src/css/seventh_box.css
@@ -7,3 +7,12 @@
     letter-spacing: 1px; }
   .seventh-panel .list-style-plus li:before {
     text-indent: -30px; }
+
+.seventh-panel .list-with-dashed {
+  padding-left: 0; }
+  .seventh-panel .list-with-dashed li {
+    list-style-type: none;
+    list-style-position: inside;
+    margin-bottom: 5px; }
+    .seventh-panel .list-with-dashed li:before {
+      content: '\2014'; }
