--- a/src/scss/desctop/second_box.scss
+++ b/src/scss/desctop/second_box.scss
@@ -1,9 +1,19 @@
 @import '../variables';
 
 .second-panel {
-  .left-transform,
+  position: relative;
+  .left-transform {
+    transform: rotate(90deg);
+    position: absolute;
+    left: -230px;
+    bottom: 27%;
+  }
+
   .right-transform {
-    display: none;
+    transform: rotate(-90deg);
+    position: absolute;
+    right: -230px;
+    bottom: 27%;
   }
 
   >.row {
