--- a/src/scss/seventh_box.scss
+++ b/src/scss/seventh_box.scss
@@ -22,4 +22,18 @@
       }
     }
   }
+
+  .list-with-dashed {
+    padding-left: 0;
+
+    li {
+      list-style-type: none;
+      list-style-position: inside;
+      margin-bottom: 5px;
+
+      &:before {
+        content: '\2014';
+      }
+    }
+  }
 }
