--- a/src/scss/desctop-1920/fifth_box.scss
+++ b/src/scss/desctop-1920/fifth_box.scss
@@ -20,43 +20,21 @@
     h4 {
       font-size: 1.4rem;
     }
-
-    p {
-      font-size: 12px;
-    }
   }
 
   .presentation-box {
-    height: 390px;
-    margin-bottom: 20px;
+    height: 250px;
 
     .left-side-box {
-      position: relative;
-
       .box-5-image {
-        width: 100%;
-      }
-
-      & + div {
-        p {
-          font-size: 12px;
-        }
-
-        .btn-gradient-border {
-          span {
-            vertical-align: text-bottom;
-          }
-        }
+        width: 120%;
+        margin-left: -20%;
       }
     }
 
     p,
     strong {
       font-size: 1.3em;
-    }
-
-    .btn-gradient-border {
-      //background: transparent;
     }
   }
 
@@ -67,25 +45,24 @@
         position: absolute;
         top: 8px;
         left: 0px;
-        width: 7px;
-        height: 7px;
+        width: 12px;
+        height: 12px;
         border-radius: 10px;
         background: $crimson;
         display: inline-block;
 
         &+p {
-          font-size: 1.1rem;
+          font-size: 1rem;
         }
       }
   }
 
-  .text-resolve-problem {
-      font-size: 1.5rem;
+  .text-resolve-problem{
+    font-size: 1.5rem;
   }
 
   .list-style-plus {
     margin-bottom: 30px;
-
     > li {
       font-size: 1rem;
     }
@@ -99,7 +76,7 @@
     }
 
     .box-5-image {
-      width: 100%;
+      width: 114%;
     }
 
     .step-ico {
@@ -112,8 +89,11 @@
         }
       }
 
-      p.text-color-light-gray {
-        font-size: 0.66rem;
+      &.col-3,
+      &.col-lg-4 {
+        p.text-color-light-gray {
+          font-size: 0.66rem;
+        }
       }
 
       .title-step-ico {
@@ -123,7 +103,7 @@
 
     .line-ico {
       position: absolute;
-      width: 20px;
+      width: 60px;
       right: 10px;
       top: 0;
     }
