--- a/src/scss/desctop-1920/ninth_box.scss
+++ b/src/scss/desctop-1920/ninth_box.scss
@@ -24,6 +24,10 @@
     }
   }
 
+  .btn-gradient-border {
+    background: transparent;
+  }
+
   .news-1 {
     background: url("../images/news-1.png") no-repeat;
     background-size: 100%;
