--- a/src/scss/desctop-1920/seventh_box.scss
+++ b/src/scss/desctop-1920/seventh_box.scss
@@ -2,7 +2,7 @@
 
 .seventh-panel {
   .row{
-    padding-left: 15px;
+    padding-right: 15px;
 
     &.d-flex {
       .text-4 {
@@ -21,7 +21,8 @@
 
   .box-image {
     img {
-      width: 100%;
+      width: 126%;
+      margin-right: -20%;
     }
   }
 
