--- a/src/scss/extra-small-mobile/eighth_box.scss
+++ b/src/scss/extra-small-mobile/eighth_box.scss
@@ -28,8 +28,8 @@
   .row-card-bonus {
     .card-body {
       > div {
-        &:first-child {
-          font-size: 12px;
+        &:last-child {
+          overflow: hidden;
         }
       }
     }
