--- a/src/scss/tablets/six_box.scss
+++ b/src/scss/tablets/six_box.scss
@@ -16,6 +16,7 @@
     li {
       div {
         margin-top: -14px;
+
         p, span {
           font-size: 1rem;
         }
@@ -34,7 +35,12 @@
     padding-right: 15px;
 
     .btn-gradient-border {
-      background: transparent;
+      height: 40px;
+      padding-top: 7px;
+
+      .attach-file {
+        opacity: 0;
+      }
     }
 
     .form-text, .text-color-light-gray {
