--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -5,8 +5,8 @@ $crimson: #F2006C;
 $pink-text-vertical: #FCB3D3;
 $light-gray: #888888;
 $text-border-purple: #A89CD9;
-$color-gradient-btn-start: #5A37B0;
-$color-gradient-btn-finish: #e90370;
+$color-gradient-btn-start: #F2006C;
+$color-gradient-btn-finish: #523AB4;
 $color-gradient-header-srart-left: #975FE0;
 $color-gradient-header-srart-right: #975EE0;
 $color-gradient-header-finish-left: #4C4080;
