--- a/src/scss/desctop-1920/eighth_box.scss
+++ b/src/scss/desctop-1920/eighth_box.scss
@@ -4,9 +4,8 @@
     padding-left: 15px;
 
     .text-4 {
-      font-size: 50px;
+      font-size: 2.5rem;
       text-align: center;
-      font-weight: 800;
 
       .wrap-title {
         display: none;
@@ -14,17 +13,15 @@
     }
 
     .text-center {
-      font-size: 20px;
+      font-size: 1.3em;
     }
 
     .text-color-purple {
       position: relative;
-      font-size: 50px;
-      font-weight: 800;
+      font-size: 2.5rem;
 
       .text-border-purple {
-        font-size: 50px;
-        font-weight: 800;
+        font-size: 2.5rem;
         position: absolute;
         top: 3px;
         right: -4px;
@@ -36,8 +33,8 @@
   .row-card-bonus {
     .card-body {
       > div {
-        &:last-child {
-          overflow: hidden;
+        &:first-child {
+          padding-bottom: 0!important;
         }
       }
       p {
@@ -84,7 +81,7 @@
       }
 
       .img-gift {
-        //width: 125% !important;
+        width: 125% !important;
         margin-left: -13%;
       }
 
@@ -94,9 +91,5 @@
         }
       }
     }
-  }
-
-  .align-items-baseline {
-    margin-left: 17%;
   }
 }
