--- a/src/scss/desctop-1920/fourth_box.scss
+++ b/src/scss/desctop-1920/fourth_box.scss
@@ -2,27 +2,24 @@
 
 .fourth-panel {
   .text-4 {
-    font-size: 50px;
-    padding-left: 65px;
-
     span {
-      font-size: 50px;
+      font-size: 1.4em;
     }
   }
   .carousel-control-next,
   .carousel-control-prev {
     top: 150px;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border-radius: 2px !important;
   }
 
   .carousel-control-prev {
-    left: -4%;
+    left: 1%;
   }
 
   .carousel-control-next {
-    right: -4%;
+    right: 1%;
   }
 
   .carousel {
