--- a/src/scss/desctop-1920/main-desctop.scss
+++ b/src/scss/desctop-1920/main-desctop.scss
@@ -24,65 +24,60 @@
       background-size: 110%;
 
       .row {
-        padding-left: 12%;
-        margin-top: 80px;
+        padding-left: 140px;
+        margin-top: 150px;
         flex-direction: column;
 
         .title-big-1 {
-          font-size: 50px;
-          margin: 55px 0 40px;
+          font-size: 75px;
+          margin: 40px 0 20px;
 
           span {
-            font-size: 50px;
+            font-size: 75px;
           }
-        }
-
-        .text-color-light-gray {
-          font-size: 18px;
-          margin-bottom: 30px;
         }
 
         .btn-gradient {
           width: 250px;
           height: 60px;
-          padding-top: 10px;
-          font-size: 24px;
         }
       }
     }
 
     .right-side-box {
-      position: relative;
-
       .row {
-        bottom: 14%;
+        bottom: 5%;
         right: 0;
-        padding: 20px;
-        position: absolute;
+        padding: 26px;
 
         @media (min-width: $desctop-start) and (max-width: 1060.98px) {
           .king-size {
-            font-size: 7.3rem;
-            line-height: 11rem;
-            font-weight: 900;
+            font-size: 7rem;
+            line-height: 8rem;
 
             .who {
-              font-weight: 900;
-              font-size: 14rem;
+              font-size: 11rem;
             }
+          }
+
+          .btn-group {
+            margin-left: 23%;
           }
         }
 
         @media (min-width: 1061px) {
           .king-size {
             font-size: 7.5rem;
-            line-height: 11rem;
-            font-weight: 900;
+            line-height: 7.5rem;
 
             .who {
-              font-size: 13rem;
-              font-weight: 900;
+              font-size: 11rem;
             }
+          }
+
+          .btn-group {
+            margin-left: 23%;
+            margin-top: 20px;
           }
         }
       }
@@ -90,13 +85,9 @@
   }
 
   .btn-bottom {
-    padding: 0 6%;
+    padding: 0 12% 0 6%;
     position: absolute;
-    bottom: 40px;
-
-    a {
-      font-size: 24px;
-    }
+    bottom: 20px;
 
     .btn-lang {
       background: transparent;
@@ -178,6 +169,6 @@
 }
 
 .logo {
-  width: 116px;
-  height: 116px;
+  width: 176px;
+  height: 176px;
 }
