--- a/src/scss/desctop-1920/six_box.scss
+++ b/src/scss/desctop-1920/six_box.scss
@@ -3,7 +3,7 @@
     padding-left: 15px;
 
     >p {
-      font-size: 11px;
+      font-size: 13px;
     }
   }
 
@@ -12,7 +12,8 @@
     margin-bottom: 20px;
 
     .image-box {
-      width: 100%;
+      width: 126%;
+      margin-left: -20%;
     }
   }
 
@@ -37,22 +38,29 @@
   .form-contacts {
     padding-right: 15px;
 
-    label {
-      font-size: 15px;
+    .col-lg-4 {
+      flex: 0 0 31%;
+      max-width: 31.333333%;
+    }
+
+    .reverse-row {
+      flex-direction: row-reverse;
+      padding-right: 9%;
+
+      .col-lg-8 {
+        margin-right: 1.9rem;
+        flex: 0 0 70%;
+        max-width: 70%;
+      }
+
+      .col-lg-halg-3 {
+        flex: 0 0 27%;
+        max-width: 27%;
+      }
     }
 
     .btn-gradient-border {
-      height: 40px;
-      padding-top: 10px;
-      span {
-        font-size: 14px;
-        font-weight: bold;
-      }
-
-
-      .attach-file {
-        opacity: 0;
-      }
+      background: transparent;
     }
 
     .form-text, .text-color-light-gray {
