--- a/src/scss/desctop/seventh_box.scss
+++ b/src/scss/desctop/seventh_box.scss
@@ -4,25 +4,40 @@
   .row{
     padding-right: 15px;
 
+    &+.row {
+      height: 495px;
+    }
+
     &.d-flex {
       .text-4 {
-        font-size: 3.5em;
+        font-size: 50px;
+        text-align: center;
 
         span {
-          font-size: 2.5rem;
+          font-size: 50px;
         }
       }
 
       p {
-        font-size: 1.5em;
+        font-size: 20px;
+        text-align: right;
       }
     }
   }
 
   .box-image {
+    position: relative;
+
     img {
-      width: 126%;
-      margin-right: -20%;
+      height: 495px;
+      position: absolute;
+      left: 0;
+      width: 743px;
+    }
+
+    a {
+      bottom: -15px;
+      position: absolute;
     }
   }
 
@@ -35,19 +50,21 @@
       margin-bottom: 10px;
 
       div {
-        margin-top: -13px;
+        margin-top: -25px;
 
         p {
-          font-size: 12px;
+          font-size: 15px;
         }
 
         h5 {
           letter-spacing: 1px;
+          font-size: 20px;
         }
       }
 
       &:before {
         text-indent: -30px;
+        font-size: 14px;
       }
     }
   }
@@ -55,6 +72,7 @@
   .list-with-dashed {
     li {
       font-size: 12px;
+      margin-bottom: 10px;
     }
   }
 }
