--- a/src/scss/desctop/third_box.scss
+++ b/src/scss/desctop/third_box.scss
@@ -1,28 +1,39 @@
 .third-panel {
+  position: relative;
+
+
+  .row {
+    margin: 0;
+  }
+
   .left-side-box {
+    padding: 0 40px;
+    margin-right: 30px;
+
     .text-1 {
-      font-size: 9em;
+      font-size: 90px;
     }
 
     p {
-      font-size: 1.5em;
+      font-size: 18px;
     }
 
     .box-3-image {
       width: 100%;
-      margin-bottom: 20px;
+      position: absolute;
+      left: 0;
     }
   }
 
   .right-side-box {
     p,
     strong {
-      font-size: 1.4em;
+      font-size: 16px;
     }
   }
 
   .text-3 {
-    font-size: 5em;
+    font-size: 50px;
     margin-top: 13px;
   }
 }
