--- a/src/scss/extra-small-mobile/main_mobile.scss
+++ b/src/scss/extra-small-mobile/main_mobile.scss
@@ -86,33 +86,38 @@
     }
 
     .footer-contacts {
-        font-size: 0.8rem;
+        font-size: 16px;
 
         span {
-            font-size: 0.8rem;
+            font-size: 16px;
         }
     }
 
     .media-box {
         .text-color-light-gray {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.7rem;
         }
 
         .col-6 {
-            margin-right: 0.9rem;
+            margin-right: 0.5rem;
+
             .views {
                 font-size: 0.6rem;
             }
 
             .media-link {
-                font-size: 0.7rem;
+                font-size: 14px;
                 margin-bottom: 0;
             }
         }
 
         .icon {
-            font-size: 1.1rem;
+            font-size: 15px;
         }
+    }
+
+    .logo {
+        margin-left: 10px!important;
     }
 }
 
